# Chat-Application

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md  server_app  test_client.py  test_client.sh
server/: CMakeLists.txt
server/include/: Client.h  ClientManager.h
server/include/core/: KqueueEngine.h  NetworkServer.h
server/include/managers/: ClientManager.h
server/include/models/: Client.h
server/include/models/DTO/: UserDTO.h
server/include/protocol/: Identify.h
server/include/utils/: JsonHandler.h  constants.h
server/src/: Client.cpp  ClientManager.cpp  main.cpp
server/src/core/: KqueueEngine.cpp  NetworkServer.cpp
server/src/managers/: ClientManager.cpp
server/src/models/: Client.cpp
server/src/utils/: JsonHandler.cpp
